Added a proxy to forward requests to FME-server
